[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "pycli-demo"
version = "0.1.0"
description = "Demo Python CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
keywords = ["demo", "cli"]
dependencies = []
[project.scripts]
pycli = "pycli.cli:main"
[tool.pytest.ini_options]
addopts = "-q"
